changes name of table

--- a/Taller1/Taller1.Frontend/Components/Pages/Employees/EmployeeForm.razor
+++ b/Taller1/Taller1.Frontend/Components/Pages/Employees/EmployeeForm.razor
@@ -1,6 +1,6 @@
 ﻿<EditForm EditContext="editContext" OnValidSubmit="OnValidSubmit">
     <DataAnnotationsValidator />
-    <MudTextField Label="Empleado"
+    <MudTextField Label="Nombre"
                   @bind-Value="@employee.FirstName"
                   For="@(() => employee.FirstName)"
                   Class="mb-4" />
