--- a/Taller1/Taller1.Frontend/Components/Pages/Employees/EmployeeIndex.razor
+++ b/Taller1/Taller1.Frontend/Components/Pages/Employees/EmployeeIndex.razor
@@ -24,15 +24,15 @@ else
                 </MudButton>
             </div>
             <MudSpacer />
-            <FilterComponent ApplyFilter="SetFilterValue" />
+            <FilterComponent ApplyFilter="SetFilterValue" />|
         </ToolBarContent>
         <HeaderContent>
-            <MudTh>Empleado</MudTh>
-            <MudTh style="width: 100px;">Apellido</MudTh>
-            <MudTh style="width: 100px;">Activo</MudTh>
-            <MudTh style="width: 150px;">Fecha de Contratación</MudTh>
-            <MudTh style="width: 100px;">Salario</MudTh>
-            <MudTh style="width: 270px;">Acciones</MudTh>
+            <MudTh style="min-width: 160px;">Nombre</MudTh>
+            <MudTh style="min-width: 160px;">Apellido</MudTh>
+            <MudTh style="min-width: 100px;">Activo</MudTh>
+            <MudTh style="min-width: 180px;">Fecha de Contratación</MudTh>
+            <MudTh style="min-width: 130px; ">Salario</MudTh>
+            <MudTh style="min-width: 200px;" >Acciones</MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd>@context.FirstName</MudTd>
