--- a/Taller1/Taller1.Frontend/Components/Pages/Employees/EmployeeIndex.razor
+++ b/Taller1/Taller1.Frontend/Components/Pages/Employees/EmployeeIndex.razor
@@ -24,7 +24,7 @@ else
                 </MudButton>
             </div>
             <MudSpacer />
-            <FilterComponent ApplyFilter="SetFilterValue" />|
+            <FilterComponent ApplyFilter="SetFilterValue" />
         </ToolBarContent>
         <HeaderContent>
             <MudTh style="min-width: 160px;">Nombre</MudTh>
@@ -32,7 +32,7 @@ else
             <MudTh style="min-width: 100px;">Activo</MudTh>
             <MudTh style="min-width: 180px;">Fecha de Contratación</MudTh>
             <MudTh style="min-width: 130px; ">Salario</MudTh>
-            <MudTh style="min-width: 200px;" >Acciones</MudTh>
+            <MudTh style="min-width: 200px;">Acciones</MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd>@context.FirstName</MudTd>
