add frontend countries,states,cities

--- a/Taller1/Taller1.Frontend/Components/Layout/NavMenu.razor
+++ b/Taller1/Taller1.Frontend/Components/Layout/NavMenu.razor
@@ -2,6 +2,7 @@
 <MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Inicio</MudNavLink>
     <MudNavLink Href="employees" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Person">Empleados</MudNavLink>
+    <MudNavLink Href="countries" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Public">Países</MudNavLink>
 
 </MudNavMenu>
 
