--- a/Taller1/Taller1.Frontend/Components/_Imports.razor
+++ b/Taller1/Taller1.Frontend/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using Taller1.Frontend
 @using Taller1.Frontend.Components
 @using Taller1.Frontend.Components.Shared
+@using Taller1.Shared.Interfaces
