--- a/Taller1/Taller1.Frontend/Components/Pages/Home.razor
+++ b/Taller1/Taller1.Frontend/Components/Pages/Home.razor
@@ -1,5 +1,16 @@
 ﻿@page "/"
 
-<PageTitle>Taller 2025-2</PageTitle>
+<PageTitle>Inicio</PageTitle>
 
-<MudText Typo="Typo.h3" GutterBottom="true">Bienvenidos a Taller 2025-2</MudText>
+<AuthorizeView Roles="Admin">
+    <Authorized>
+        <MudText Typo="Typo.h3" Class="m-2" GutterBottom="true">Hola @context.User.Identity?.Name</MudText>
+    </Authorized>
+    <NotAuthorized>
+        <MudText Typo="Typo.h3" Class="m-2" GutterBottom="true">Eres usuario anónimo</MudText>
+    </NotAuthorized>
+</AuthorizeView>
+
+
+
+<MudText Class="m-2">Taller sistema de pedidos ejemplo para el curso de Servicios WEB 2025-II</MudText>
